<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.licenta.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.licenta.ui.map.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.licenta.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.licenta.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_itinerary"
        android:name="com.example.licenta.ui.itinerary.ItineraryFragment"
        android:label="Itinerariu">
        <argument
            android:name="itinerary_json"
            app:argType="string" />
        <action
            android:id="@+id/action_itineraryFragment_to_navigation_calendar"
            app:destination="@id/navigation_calendar"
            app:popUpTo="@id/navigation_home" />
    </fragment>
</navigation>
